fix kitchen-sink live demo overflow

--- a/src/kitchen-sink/style.scss
+++ b/src/kitchen-sink/style.scss
@@ -15,12 +15,13 @@
       box-shadow: 0 1px 4px 1px rgba(0,0,0,.1);
 
       .live-demo {
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        overflow: hidden;
-
-        .playground .playgroundPreview {
-          display: none;
+        .playground {
+          border-top-left-radius: 5px;
+          border-top-right-radius: 5px;
+          overflow: hidden;
+          .playgroundPreview {
+            display: none;
+          }
         }
 
         .component {
